# ABLE_App

./: backend.py  backendUpdated.py  enum_filetypes.py  gui.py  pdf_creator.py  pyproject.toml  registrations_April_24.xlsx  setup.py  test_backendUpdated.py
ref_documents/: ABLE test data.xlsx  Badge Generator User Guide_email.docx  Badge Generator User Guide_no-email.docx  SizeCompare.xlsx  example_2023.xlsx  registrations_April_24.xlsx
ref_documents/2025/: ABLE 2025 NameTags.xlsx
testimg/: testfile.py
